[gd_scene load_steps=3 format=3 uid="uid://br0qeiur055xs"]

[ext_resource type="Script" path="res://Scripts/server_login_ui.gd" id="1_n5bxm"]
[ext_resource type="Script" path="res://Scripts/goose_client.gd" id="2_1ixf4"]

[node name="Ui" type="Control" node_paths=PackedStringArray("nc")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_n5bxm")
nc = NodePath("nc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "email:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmailLE" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "a@godot-rocks.com"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "password"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordLE" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "12345678"
secret = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UsernameLE" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "godot-a"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogInB" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "log in"

[node name="nc" type="Node" parent="."]
script = ExtResource("2_1ixf4")
host = null
port = null
key = null
secure = null
timeout = null
debug = false
game_rpc = null
